# u-os-sdk-quickstart

./: .bashrc  .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  reusescript  workspace.code-workspace
.devcontainer/: devcontainer.json
.devcontainer/ARMv7/: devcontainer.json
.devcontainer/ARMv8/: devcontainer.json
.devcontainer/x86_64/: devcontainer.json  devcontainer.json.license
flatbuffers/: NativeToolchainConfig.cmake  README.md
hello_io_world/: CMakeLists.txt  docu  example_io_root  main_triple.c
helloworld/: CMakeLists.txt  README.md  docu  helloworld.c  main.c
helloworld_mqtt/: CMakeLists.txt  main.c
station_configuration/example_JSON/: unix_sock.py
station_configuration/example_flatbuffers/: CMakeLists.txt  buildDeployRequest.cpp  buildGetDeviceStateRequest.cpp  docu  example_fb_root  main.cpp  prepareRequestFromJSON.cpp  printBuffer.cpp  printByteVect.cpp  responseToAccessors.cpp  responseToJSON.cpp  transceive.cpp
station_configuration/example_flatbuffers/api/: CMakeLists.txt  interface.fbs
station_configuration/example_flatbuffers/include/: buildDeployRequest.h  buildGetDeviceStateRequest.h  prepareRequestFromJSON.h  printBuffer.h  printByteVect.h  requestsJSON.h  responseToAccessors.h  responseToJSON.h  transceive.h
u-os-kernel-dev/: README.md
u-os-kernel-dev/hello-mod/: Makefile
